Attempt to fix styling issue on mobile during flip of fortune

--- a/src/components/TarotCard/TarotCard.css
+++ b/src/components/TarotCard/TarotCard.css
@@ -1,6 +1,5 @@
 .tarot-sides-container {
   display: flex;
-  align-items: center;
   justify-content: center;
   height: 90vmin;
 }
